--- a/use-cases/two-tier-architectures/edge-security-nodeport/ingress.yml
+++ b/use-cases/two-tier-architectures/edge-security-nodeport/ingress.yml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: app1-ingress
-  namespace: layer7
+  namespace: nginx
 spec:
   ingressClassName: nginx-plus
   rules:
@@ -22,7 +22,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: app2-ingress
-  namespace: layer7
+  namespace: nginx
 spec:
   ingressClassName: nginx-plus
   rules:
@@ -41,7 +41,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: www-ingress
-  namespace: layer7
+  namespace: nginx
 spec:
   ingressClassName: nginx-plus
   rules:
